--- a/html.index.html
+++ b/html.index.html
@@ -121,7 +121,7 @@
 
     <!-- About Me Card with Typing Effect and NO Links -->
     <div class="card">
-      <img src="./html.index_files/32.jpg" alt="Profile Picture">
+      <img src="html.index.html" alt="Profile Picture">
       <h2>About Me</h2>
       <div id="typing" class="typing">Hi! I'm Dipshikha Khadka, a beginner web developer studying bachelors in AI and Robotics at Kimpo University , South Korea. I enjoy coding building functional websites and exploring new technologies. My coding journey is because of my curiosity, creativity, and a desire to solve real-world problems.</div>
     </div>
